# argh

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yml  rust.yml
argh/: Cargo.toml
argh/examples/: completion_example.rs  environment_variables.rs  goup.rs  help_text_example.rs  simple_example.rs
argh/src/: help.rs  lib.rs
argh/tests/: args_info_tests.rs  env.rs  global_options.rs  help_json_tests.rs  lib.rs  short_alias.rs  subcommand_short_help.rs  synonyms.rs
argh/tests/ui/bad-long-names/: bad-long-names.rs  bad-long-names.stderr
argh/tests/ui/conflicting-tails/: positional-and-greedy.rs  positional-and-greedy.stderr
argh/tests/ui/duplicate-name/: duplicate-long-name.rs  duplicate-long-name.stderr  duplicate-short-name.rs  duplicate-short-name.stderr
argh_complete/: Cargo.toml
argh_complete/src/: bash.rs  fish.rs  lib.rs  nushell.rs  tests.rs  zsh.rs
argh_derive/: Cargo.toml
argh_derive/src/: args_info.rs  errors.rs  help.rs  help_json.rs  lib.rs  parse_attrs.rs
argh_shared/: Cargo.toml
argh_shared/src/: help.rs  lib.rs
cargho_derive/: Cargo.toml
cargho_derive/src/: help.rs  lib.rs  parse_attrs.rs
cargho_shared/: Cargo.toml
cargho_shared/src/: lib.rs
examples/: empty.rs
src/: lib.rs
tests/: lib.rs
