[package]
name = "cargho"
version = "0.1.5"
authors = ["Taylor Cramer <cramertj@google.com>", "Benjamin Brittain <bwb@google.com>", "Erick Tryzelaar <etryzelaar@google.com>"]
edition = "2018"
keywords = ["args", "arguments", "derive", "cli"]
license = "BSD-3-Clause"
description = "Derive-based argument parser optimized for being up to date in crates.io"
repository = "https://github.com/google/argh"

[dependencies]
argh_shared = { package = "cargho_shared", version = "0.1.5", path = "../argh_shared" }
argh_derive = { package = "cargho_derive", version = "0.1.5", path = "../argh_derive" }
