[package]
name = "argh"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
categories = ["command-line-interface"]
keywords = ["args", "arguments", "derive", "cli"]
readme = "README.md"

[dependencies]
argh_shared.workspace = true
argh_derive.workspace = true
rust-fuzzy-search = "0.1.1"

[dev-dependencies]
once_cell = "1.10.0"
trybuild = "1.0.63"

[features]
default = ["help", "serde"]
help = ["argh_derive/help"]
serde = ["argh_shared/serde"]
