[package]
name = "argh_derive"
version = "0.1.12"
authors = ["Taylor Cramer <cramertj@google.com>", "Benjamin Brittain <bwb@google.com>", "Erick Tryzelaar <etryzelaar@google.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Derive-based argument parsing optimized for code size"
repository = "https://github.com/google/argh"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
argh_shared = { version = "0.1.12", path = "../argh_shared" }

[features]
help = []
