[package]
name = "argh_shared"
version = "0.1.12"
authors = ["Taylor Cramer <cramertj@google.com>", "Benjamin Brittain <bwb@google.com>", "Erick Tryzelaar <etryzelaar@google.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Derive-based argument parsing optimized for code size"
repository = "https://github.com/google/argh"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
